[package]
name = "rust-lock-bug-detector"
version = "0.1.0"
authors = ["BurtonQin <bobbqqin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rust-lock-bug-detector"
path = "src/main.rs"

[[bin]]
name = "cargo-lock-bug-detect"
path = "src/bin/cargo-lock-bug-detect.rs"

[dependencies]
cargo_metadata = { version = "0.9.0", optional = true }
directories = { version = "2.0", optional = true }
rustc_version = { version = "0.2.3", optional = true }
getrandom = { version = "0.1.8", features = ["std"] }
byteorder = "1.3"
env_logger = "0.7.1"
log = "0.4"
shell-escape = "0.1.4"
hex = "0.4.0"
rand = "0.7"

[profile.dev]
incremental = false
