[package]
name = "cargo-lock-bug-detect"
version = "0.1.0"
authors = ["BurtonQin <bobbqqin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version = "0.2.3"

[[bin]]
name = "cargo-lock-bug-detect"
path = "main.rs"
